--- a/style.css
+++ b/style.css
@@ -1,80 +1,230 @@
-* {
+*{
+    box-sizing: border-box;
+    font-family: verdana, sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
 }
-.hero {
-    width: 100x;
-    min-height: 100vh;
-    background-image: url(images/raphizm.jpg);
-    background-position: center;
-    background-size: cover;
-    padding: 40px 40%; 
-    overflow: hidden;
-    position: absolute;
+body{
+    padding: 10;
+    margin: 0;
+    font-family: nunito;    
+    
 }
-nav{
-    padding: 10px 0;
+.header1{
+    width: 100%;
+    height: 100vh;
+    background: #fff;
+    padding-left: 11%;
+    padding-right: 8%;
+    position: relative;
+}
+.title-banner {
+    background-color: teal;
+    color: hsl(0, 0%, 90%   );
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+.container{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 20px 0 10px;   
 }
-.logo {
-    width: 140px;
-}
-nav ul li{
-    display: inline-block;
+.container ul li{
     list-style: none;
-    margin: 10px 15px;
-}
-nav ul li a{
-    text-decoration: none;
-    color: #333;
-    font-weight: 400;
-}
-.login-btn{
-    text-decoration: none;
-    color: #333;
-    margin-right: 15px;
-    font-weight: 400;
-}
-.btn{
     display: inline-block;
+    margin-right: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.container ul li a{
     text-decoration: none;
-    padding: 14px 40px;
-    color: #fff;
-    background-image: linear-gradient(45deg, #df4881, #c430d7);
-    font-size: 14px;
-    border-radius: 30px;
-    border-top-right-radius: 0;
-    transition: 0.5s;
+    color: #fff ; 
+    font-size: 14px;  
 }
-.content{
-    margin-top: 10%;
-    max-width: 600px;
+.container h1{
+    text-decoration: none;
+    color: #ffff    ; 
+    font-size: 18px;
+    padding-right: 50%;  
 }
-.content h1{
-    font-size: 70px;
-    color: #222; 
+.img {
+    align-items: center;
+    margin-left: auto;
+    margin-right: 15%;
+    border-radius: 50%; 
+    width: 40%;
+    margin-top: 2%;
 }
-.content p{
-    margin: 10px 0 30px;
-    color: #333;
+.text{
+    color: teal;
+    font-size: 20px;
+    margin-right: 60%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
 
 }
-.content .btn{
-    padding: 15px 80px;
-    font-size: 16px;
+.img p{
+    font-size: 12px;
+    margin-right: 60%;
+    font-family: 'Times New Roman', Times, serif;
+    text-align-last: center;
+}
+.logo{
+    margin-top: 2p%;
+    
+}
+.box{
+    background-color:teal;
+    color: hsl(0, 0%, 90%   );
+    padding-left: 4%;
+    padding-right: 50%;
+    position: inherit;
+    margin-top: 5%;
+    padding: 20px;
+    
+    
+    
 
 }
-.btn:hover{
-    border-top-right-radius: 30px;
+.box h2{
+    font-family: uninto;
+    margin-left: 3.1%;
+    
+    
 }
-.feature-img{
-    width: 530px;
-    position: absolute;
-    bottom: 0;
-    right: 0%;
-    left: 10;
+.box p{
+    font-size: smaller;
+    margin-left: 3.1%;
+    float: left;
 }
+.box h3{
+    margin-left: 3.1%;
+    display: inline-block;
+    padding-bottom: 5%;
+}
+
+/*The header*/
+header .desc{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #ffffff;
+  background-image: url("bj.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  
+  
+}
+header h1{
+ color: rgb(59, 95, 95);
+ background-size: 20%;
+
+ background-color: white;
+ padding-top: 100px;
+ padding-right: 50px;
+ padding-bottom: 50px;
+ padding-left: 80px;
+ font-family: times roman;
+ font-size: 30px;
+ margin-bottom: 0px;
+ border: px solid black;
+
+  
+}
+
+header .desc .desc_item{
+   padding: 20px;
+   padding-bottom: 50px;
+   width: 25%;
+   height: 50%;
+   background-color: teal;
+   border-radius: 15px;
+   margin-left: 3%;
+  
+}
+
+header .desc .desc_item h2{
+  color: #ffffff;
+  font-size: 20px;
+  text-align: center;
+}
+header p{
+    color: #ffffff;
+    font-size: 10px;
+    text-align: center;
+}
+.contact{    
+width: 100%;
+height: 25vh;
+background: teal;
+padding-left: 11%;
+padding-right: 8%;
+align-items: center;
+justify-items: auto;
+padding-bottom: 15%;
+}
+.contact p{
+    font-size: 10px;
+    margin-top: 2%;
+    padding-top: 5%;
+  
+   
+}
+.social{
+    float: inline-start;
+    margin-inline-start: 40%;
+    
+
+}
+.fa {
+    padding: 10px;
+    font-size: 20px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 1px;
+    float: left;
+    position: relative;
+    margin-left: 1%;
+    display: flex;
+    
+   
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+    margin: 15px 0 3px 0;
+  }
+  
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+    margin: 15px 0 3px 0;
+  }
+  
+  .fa-google {
+    background: #dd4b39;
+    color: white;
+    margin: 15px 0 3px 0;
+  }
+  
+  .fa-linkedin {
+    background: #007bb5;
+    color: white;
+    margin: 15px 0 3px 0;
+  }
+  
+  .fa-youtube {
+    background: #bb0000;
+    color: white;
+    margin: 15px 0 3px 0;
+  }
+  .wrapup{
+
+  }
