--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     position: relative;
 }
 .title-banner {
-    background-color: teal;
+    background-color:rgba(0, 146, 176, 1);
     color: hsl(0, 0%, 90%   );
     padding-top: 2px;
     padding-bottom: 2px;
@@ -57,7 +57,7 @@ body{
     margin-top: 2%;
 }
 .text{
-    color: teal;
+    color: #00a3ba;
     font-size: 20px;
     margin-right: 60%;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -75,7 +75,7 @@ body{
     
 }
 .box{
-    background-color:teal;
+    background-color:rgba(0, 114, 145, 1);
     color: hsl(0, 0%, 90%   );
     padding-left: 4%;
     padding-right: 50%;
@@ -117,7 +117,7 @@ header .desc{
   
 }
 header h1{
- color: rgb(59, 95, 95);
+ color: rgba(0, 114, 145, 1);
  background-size: 20%;
 
  background-color: white;
@@ -138,7 +138,7 @@ header .desc .desc_item{
    padding-bottom: 50px;
    width: 25%;
    height: 50%;
-   background-color: teal;
+   background-color:rgba(0, 90, 112, 1);
    border-radius: 15px;
    margin-left: 3%;
   
@@ -157,7 +157,7 @@ header p{
 .contact{    
 width: 100%;
 height: 25vh;
-background: teal;
+background:rgba(0, 114, 145, 1);
 padding-left: 11%;
 padding-right: 8%;
 align-items: center;
