--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body{
     align-items: center;
     margin-left: auto;
     margin-right: 18%;
-    border-radius: 50%; 
+    border-radius: 0%; 
     width: 40%;
     margin-top: 2%;
 }
@@ -164,11 +164,14 @@ padding-right: 8%;
 align-items: center;
 justify-items: auto;
 padding-bottom: 15%;
+
 }
 .contact p{
     font-size: 10px;
     margin-top: 2%;
     padding-top: 5%;
+    text-align-last: center;
+    
   
    
 }
@@ -226,14 +229,13 @@ padding-bottom: 15%;
     color: white;
     margin: 15px 0 3px 0;
   }
-  .wrapup{
+  
 
-  }
   /* Media Queries */ 
 @media screen and (min-width: 768px) {
     .desc {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         flex-wrap: wrap;
     }
     .desc_item {
@@ -247,7 +249,7 @@ padding-bottom: 15%;
     
         }
     }
-  /* Media Queries */ 
+
 @media screen and (min-width: 768px) {
     .box {
         display: flex;
@@ -264,3 +266,4 @@ padding-bottom: 15%;
          width: 30%;
     
         }  
+        
